# hackaton-ota

./: .gitignore  Cargo.toml  Dokumentacja Core  Dokumentacja kreatora pliku  README.MD
client/docs/: outline.md
client/firststage/src/: core.rs  errors.rs  lib.rs  structs.rs  traits.rs
client/packager/: Cargo.toml
client/packager/src/: main.rs
client/updater/src/: local_fs_impl.rs  main.rs
client/updater/wrappers/Linux/: app_config  application  wrapper.sh
docs/: imhex.pat  outline.md  synopsis.pptx
firststage/: Cargo.toml
firststage/src/: core.rs  errors.rs  lib.rs  structs.rs  traits.rs
packager/: Cargo.toml
packager/src/: main.rs
server/: README.md  keygen.sh  server_config.txt
server/src/: HttpsServer.java
server/updates/ABCDE/: conf.txt
server/updates/UWXYZ/: conf.txt
src/: main.rs
updater/: Cargo.toml
updater/src/: local_fs_impl.rs  main.rs
updater/wrappers/Linux/: app_config  wrapper.sh
